# FAST-SLAM-G

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  package.xml  package_ROS1.xml  package_ROS2.xml
config/: debug_mid360.yaml
config/gridmap/: mid360.yaml
config/mapping/: airy.yaml  avia.yaml  hap.yaml  horizon.yaml  kaist_urban.yaml  l2.yaml  marsim.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
config/nav2/: mid360.yaml
config/reloc/: mid360.yaml
config/sam/: airy.yaml  l2.yaml  mid360.yaml
config_ROS1/mapping/: airy.yaml
config_ROS1/sam/: airy.yaml
gridmap/: occupancy_map_editor.py
gridmap/map/: edited_map.pgm
include/: common_lib.h  common_utils.h  map_optimization.h  posebuffer.h  ros_utils.h  utility.h
include/ikd-Tree/: ikdtree_public.h
launch_ROS1/: debug_airy.launch  debug_marsim.launch  debug_mid360.launch  gdb_debug_example.launch
launch_ROS1/mapping/: mapping_airy.launch  mapping_avia.launch  mapping_hap.launch  mapping_horizon.launch  mapping_kaist_urban.launch  mapping_l2.launch  mapping_marsim.launch  mapping_mid360.launch  mapping_ouster64.launch  mapping_velodyne.launch
launch_ROS1/reloc/: reloc_mid360.launch
launch_ROS1/sam/: debug_sam.launch  sam_airy.launch  sam_l2.launch  sam_mid360.launch
launch_ROS2/gridmap/: gridmap_mid360.launch.py
launch_ROS2/mapping/: mapping_mid360.launch.py
launch_ROS2/nav2/: nav2_mid360.launch.py
launch_ROS2/reloc/: reloc_mid360.launch.py
launch_ROS2/sam/: sam_debug.launch.py  sam_mid360.launch.py
map/: edited_map.pgm  edited_map.yaml  map_edits.yaml
rviz_cfg/: grid_ros2.rviz  loam_robosense_ros1.rviz  loam_ros2.rviz  nav2_ros2.rviz  sam_robosense_ros1.rviz  sam_ros2.rviz
src/: IMU_Processing.hpp  cloud_to_Occupancy.cpp  cloud_to_occupancy.cpp  initialPoseReg.cpp  laserMapping.cpp  mapOptimization.cpp  preprocess.cpp  preprocess.h  utility.cpp
tools/: occupancy_map_editor.py
waypoints/: README.md  waypoint_markers.py  waypoint_publish.py  waypoint_record.py  waypoint_task_dispatcher.py  waypoint_task_record.py  waypoint_task_run.py
waypoints/points/: waypoints.yaml
